--- a/OrderAggregator/Properties/launchSettings.json
+++ b/OrderAggregator/Properties/launchSettings.json
@@ -3,17 +3,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14798",
-      "sslPort": 44321
+      "applicationUrl": "http://localhost:8542",
+      "sslPort": 44311
     }
   },
   "profiles": {
-    "OcelotApiGw": {
+    "OrderAggregator": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7064;http://localhost:5064",
+      "applicationUrl": "https://localhost:7034;http://localhost:5034",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
